--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
             <div class="jane-style">
                 <h3>Hello World!</h3>
             </div>
-            <!-- New HTML content goes here! -->
-            
+            <<!-- New HTML content goes here! -->>
+            <div class="my-style">
+                <h3>Krys <em>loves</em> animals.</h3>
+
+            </div>
             <div class="code-ninja-style">
                 <h3>This is first time using GitHub!</h3>
             </div>
